# RAG-Document-Generator

./: .gitignore
v2/: .coverage  .env  .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  docker-compose.yml  environment.yml  launch.ps1  pyproject.toml  requirements.txt  setup.ps1
v2/backend/: health.py  main.py  services.py
v2/backend/agents/: ollama_client.py
v2/backend/agents/document_builder/: agent.py
v2/backend/agents/editor/: agent.py
v2/backend/agents/planner/: agent.py
v2/backend/agents/retriever/: agent.py
v2/backend/agents/validator/: agent.py  recursive_validator.py
v2/backend/agents/writer/: agent.py
v2/backend/api/: models.py  task_tracker.py
v2/backend/api/routes/: projects.py  streaming.py
v2/backend/config/: settings.py
v2/backend/exporters/docx/: compiler.py
v2/backend/ingestion/: multimodal.py
v2/backend/operations/: __init__.py  backup_cleanup.py
v2/backend/orchestration/: parallel_generation.py
v2/backend/streaming/: __init__.py  updates.py
v2/docker/: Dockerfile.backend  Dockerfile.frontend
v2/frontend/streamlit_app/: app.py
v2/scripts/: backup_cleanup_cli.py  healthcheck.ps1  init_qdrant.py  launch.ps1  pull_ollama_models.ps1  start_backend.ps1  start_frontend.ps1
v2/storage/cache/: launcher-config.json
v2/storage/vectors/: 3f5c7b0c-3251-4cd1-b5c1-a11670325f93.json
v2/test-storage/vectors/: 707bcd29-bc6b-4e65-ab5a-8db92cf03688.json
v2/tests/: test_api.py  test_chunking.py  test_generation.py  test_hash_embedding.py  test_streaming_parallel.py
v2/workers/: celery_app.py  tasks.py
(+92 files in other folders)
