[project]
name = "rag-document-generator"
version = "0.1.0"
description = "Offline-first RAG based document generator with Ollama, FastAPI, Streamlit, and DOCX export."
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "streamlit>=1.36.0",
    "requests>=2.32.0",
    "python-multipart>=0.0.9",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "python-docx>=1.1.2",
    "pypdf>=4.3.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
